# adv-comp-graphics

./: .gitignore  CMakeLists.txt
assets/tables/: NumPolys.txt  TrisTable.txt
lib/glew/: CMakeLists.txt  glew.pc
lib/glm/glm/gtx/: common.hpp
lib/imgui/: CMakeLists.txt
lib/imgui/backends/: imgui_impl_vulkan.cpp
src/cpp/: camera.cpp  camera.h  frustum.cpp  frustum.h  gl_misc.cpp  gl_misc.h  guiVariables.cpp  guiVariables.h  main.cpp  shader.cpp  shader.h  shading.cpp  shading.h
src/cpp/sky/: sky_physics.cpp  sky_physics.h
src/cpp/sky/example/: acceleration.cpp  skycolor.cpp  teapotdata.h
src/cpp/terrain/: cell.cpp  cell.h  file.cpp  file.h  grid.cpp  grid.h  hashing.h  mapCache.h  voxel.cpp  voxel.h
src/cpp/terrain/new/: block.cpp  block.h  chunk.cpp  chunk.h  chunkManager.cpp  chunkManager.h  density.cpp  density.h  terrainManager.cpp  terrainManager.h  terrainManagerData.cpp
src/cpp/textures/: image.cpp  image.h  mipmap.cpp  mipmap.h  texture.cpp  texture.h
src/shaders/: background.frag  blockPolygons.comp  density.comp  fullscreenQuad.vert  prefixSumFirst.comp  prefixSumSecond.comp  prefixSumThird.comp  terrain.frag  terrain.vert  voxelGeometry.comp
